maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:75: error: not enough arguments for method isDirectionFree: (dir: plm.universe.Direction)Boolean.
Unspecified value parameter dir.
		case 1 => {while (isDirectionFree()) {aramis()}; e = 0}
                                                 ^